[tool.poetry]
name = "django-challenge-sc"
version = "0.2.0"
description = ""
authors = ["Sebastián Dávila"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-rest-framework = "^0.1.0"
django-filter = "^21.1"
pytest = "^7.1.3"
pandas = "^1.4.4"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"
pytest-django = "^4.5.2"
ipdb = "^0.13.9"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
